# qa-playground

./: README.md  qa-playground.cabal
benchmark/: Main.hs
src/: Shuffle.hs  Sort.hs  Sorting.hs
test/: Main.hs  Spec.hs
test/Testsuite/: Main.hs  Orphans.hs
