name:                qa-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/qa-playground#readme
license:             BSD3
license-file:        LICENSE
author:              David Luposchainsky <dluposchainsky on googles email service>
maintainer:          David Luposchainsky <dluposchainsky on googles email service>
copyright:           David Luposchainsky <dluposchainsky on googles email service>
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/qa-playground

library
  hs-source-dirs:      src
  exposed-modules:     Sort, Shuffle
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , tf-random
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Testsuite
  main-is:             Main.hs
  build-depends:       base
                     , qa-playground
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck, QuickCheck
                     , tasty-smallcheck, smallcheck
                     , tf-random
                     , vector
                     , vector-algorithms
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Doctests
  main-is:             Main.hs
  build-depends:       base
                     , doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark qa-playground-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , qa-playground
                     , criterion
                     , vector
                     , vector-algorithms
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
